// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages should receive PRIVMSG 1`] = `
Object {
  "payload": Object {
    "text": "hello world",
    "user": Object {
      "host": "host",
      "nick": "nick1",
      "user": "user",
    },
  },
  "route": Object {
    "channelKey": "nick1",
    "serverKey": "server1",
  },
  "type": "MESSAGE/PRIVMSG",
}
`;

exports[`messages should send PART with message 1`] = `
Object {
  "embeddedAction": undefined,
  "payload": Object {
    "raw": "PART #channel Goodbye!",
  },
  "route": Object {
    "channelKey": "@none",
    "serverKey": "server1",
  },
  "type": "SOCKET/SEND_RAW_MESSAGE",
}
`;

exports[`messages should send PART without message 1`] = `
Object {
  "embeddedAction": undefined,
  "payload": Object {
    "raw": "PART #channel ",
  },
  "route": Object {
    "channelKey": "@none",
    "serverKey": "server1",
  },
  "type": "SOCKET/SEND_RAW_MESSAGE",
}
`;

exports[`messages should send PING 1`] = `
Object {
  "embeddedAction": undefined,
  "payload": Object {
    "raw": "PING key",
  },
  "route": Object {
    "channelKey": "@none",
    "serverKey": "server1",
  },
  "type": "SOCKET/SEND_RAW_MESSAGE",
}
`;

exports[`messages should send PONG 1`] = `
Object {
  "embeddedAction": Object {
    "payload": Object {
      "key": "key",
    },
    "route": Object {
      "channelKey": "@status",
      "serverKey": "server1",
    },
    "type": "MESSAGE/SEND_PONG_TO_SERVER",
  },
  "payload": Object {
    "raw": "PONG key",
  },
  "route": Object {
    "channelKey": "@none",
    "serverKey": "server1",
  },
  "type": "SOCKET/SEND_RAW_MESSAGE",
}
`;

exports[`messages should send QUIT with message 1`] = `
Object {
  "embeddedAction": undefined,
  "payload": Object {
    "raw": "QUIT Goodbye!",
  },
  "route": Object {
    "channelKey": "@none",
    "serverKey": "server1",
  },
  "type": "SOCKET/SEND_RAW_MESSAGE",
}
`;

exports[`messages should send QUIT without message 1`] = `
Object {
  "embeddedAction": undefined,
  "payload": Object {
    "raw": "QUIT ",
  },
  "route": Object {
    "channelKey": "@none",
    "serverKey": "server1",
  },
  "type": "SOCKET/SEND_RAW_MESSAGE",
}
`;

exports[`messages should send USER 1`] = `
Object {
  "embeddedAction": undefined,
  "payload": Object {
    "raw": "USER username 0 * :Real Name",
  },
  "route": Object {
    "channelKey": "@none",
    "serverKey": "server1",
  },
  "type": "SOCKET/SEND_RAW_MESSAGE",
}
`;
